@@ -1,7 +1,6 @@
 package com.example.FoodieBackend.Security;
 
 import lombok.RequiredArgsConstructor;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
@@ -17,7 +16,6 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -27,84 +25,45 @@ public class SecurityConfig {
 
     private final JwtFilter jwtFilter;
 
-    @Value("${app.cors.allowed-origins}")
-    private String allowedOrigins;
-
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
-            // ❌ Disable CSRF (important for APIs)
             .csrf(AbstractHttpConfigurer::disable)
-
-            // ✅ Enable CORS
             .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-
-            // ❌ Stateless session (JWT)
             .sessionManagement(s -> s.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-
             .authorizeHttpRequests(auth -> auth
-
-                // ========================
-                // ✅ PUBLIC ENDPOINTS
-                // ========================
                 .requestMatchers("/api/auth/**").permitAll()
-
                 .requestMatchers("/api/**").permitAll()
-                // Menu public
                 .requestMatchers(HttpMethod.GET, "/api/menu/**").permitAll()
-
-                // Images public
                 .requestMatchers("/imgs/**").permitAll()
-
-                // 🔥 PAYMENT APIs (VERY IMPORTANT FIX)
                 .requestMatchers("/api/payment/**").permitAll()
-
-                // ========================
-                // TEMP (for development)
-                // ========================
                 .requestMatchers(HttpMethod.POST, "/api/menu/**").permitAll()
                 .requestMatchers(HttpMethod.PUT, "/api/menu/**").permitAll()
-
-                // ========================
-                // ADMIN ONLY
-                // ========================
                 .requestMatchers("/api/admin/**").hasRole("ADMIN")
                 .requestMatchers(HttpMethod.DELETE, "/api/menu/**").hasRole("ADMIN")
                 .requestMatchers(HttpMethod.GET, "/api/orders").hasRole("ADMIN")
-
-                // ========================
-                // EVERYTHING ELSE
-                // ========================
                 .anyRequest().authenticated()
             )
-
-            // JWT filter
             .addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
     }
 
-    // ========================
-    // ✅ CORS CONFIG
-    // ========================
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
 
-        config.setAllowedOrigins(Arrays.asList(allowedOrigins.split(",")));
+        // ✅ Changed to setAllowedOriginPatterns - works with credentials
+        config.setAllowedOriginPatterns(List.of("*"));
         config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         config.setAllowedHeaders(List.of("*"));
         config.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
-
         return source;
     }
 
-    // ========================
-    // ✅ PASSWORD ENCODER
-    // ========================
     @Bean
     public PasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder();
